// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddressList should render 1`] = `
<DocumentFragment>
  <div
    data-testid="AddressList"
  >
    <h2
      class="py-5 text-2xl font-bold"
    >
      Select Address
    </h2>
    <div
      class="sc-AxirZ dyYkHQ"
      role="table"
    >
      <table
        class="table-auto"
      >
        <thead>
          <tr
            role="row"
          >
            <th
              class="text-xs text-left select-none text-theme-neutral-400"
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top  undefined"
              >
                <div
                  class="mr-1"
                />
                <div
                  class="mt-1 text-theme-color-neutral-500"
                  data-testid="table__Sort"
                />
              </div>
            </th>
            <th
              class="text-xs text-left select-none text-theme-neutral-400"
              colspan="1"
              data-testid="table__th--1"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top  undefined"
              >
                <div
                  class="mr-1"
                >
                  My Address
                </div>
                <div
                  class="mt-1 text-theme-color-neutral-500"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxjAm iepfoc"
                    height="10"
                    width="10"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="text-xs text-left select-none text-theme-neutral-400"
              colspan="1"
              data-testid="table__th--2"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top  flex justify-center"
              >
                <div
                  class="mr-1"
                />
                <div
                  class="mt-1 text-theme-color-neutral-500"
                  data-testid="table__Sort"
                />
              </div>
            </th>
            <th
              class="text-xs text-left select-none text-theme-neutral-400"
              colspan="1"
              data-testid="table__th--3"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top  undefined"
              >
                <div
                  class="mr-1"
                >
                  Balance
                </div>
                <div
                  class="mt-1 text-theme-color-neutral-500"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxjAm iepfoc"
                    height="10"
                    width="10"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="text-xs text-left select-none text-theme-neutral-400"
              colspan="1"
              data-testid="table__th--4"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top  undefined"
              >
                <div
                  class="mr-1"
                />
                <div
                  class="mt-1 text-theme-color-neutral-500"
                  data-testid="table__Sort"
                />
              </div>
            </th>
            <th
              class="text-xs text-left select-none text-theme-neutral-400"
              colspan="1"
              data-testid="table__th--5"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top  undefined"
              >
                <div
                  class="mr-1"
                >
                  Delegate
                </div>
                <div
                  class="mt-1 text-theme-color-neutral-500"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxjAm iepfoc"
                    height="10"
                    width="10"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="text-xs text-left select-none text-theme-neutral-400"
              colspan="1"
              data-testid="table__th--6"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top  undefined"
              >
                <div
                  class="mr-1"
                >
                  Rank
                </div>
                <div
                  class="mt-1 text-theme-color-neutral-500"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxjAm iepfoc"
                    height="10"
                    width="10"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="text-xs text-left select-none text-theme-neutral-400"
              colspan="1"
              data-testid="table__th--7"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top  flex justify-center"
              >
                <div
                  class="mr-1"
                >
                  Profile
                </div>
                <div
                  class="mt-1 text-theme-color-neutral-500"
                  data-testid="table__Sort"
                />
              </div>
            </th>
            <th
              class="text-xs text-left select-none text-theme-neutral-400"
              colspan="1"
              data-testid="table__th--8"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top  flex justify-center"
              >
                <div
                  class="mr-1"
                >
                  Status
                </div>
                <div
                  class="mt-1 text-theme-color-neutral-500"
                  data-testid="table__Sort"
                />
              </div>
            </th>
            <th
              class="text-xs text-left select-none text-theme-neutral-400"
              colspan="1"
              data-testid="table__th--9"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top  undefined"
              >
                <div
                  class="mr-1"
                />
                <div
                  class="mt-1 text-theme-color-neutral-500"
                  data-testid="table__Sort"
                />
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        >
          <tr
            class="border-b border-theme-neutral-200"
          >
            <td
              class="py-5"
            >
              <div
                class="Avatar__AvatarStyled-sc-1vsy2s2-0 gJAVMD"
                data-testid="Avatar"
              >
                <img
                  src="data:image/svg+xml;utf8,conic-gradient(from 514.7985492727872deg at 33.284991247330005% 71.51723438303252%, #FBD38D, calc(0 * 100% / 5), transparent 0),conic-gradient(from 43.220314804736745deg at 73.19567903600186% 33.764454410465284%, #742A2A, calc(1 * 100% / 5), transparent 0),conic-gradient(from 268.2997189190799deg at 78.72665838557288% 38.86740463698292%, #F56565, calc(2 * 100% / 5), transparent 0),conic-gradient(from 59.62403380661902deg at 24.22095837116841% 16.437107647039266%, #4C51BF, calc(3 * 100% / 5), transparent 0),conic-gradient(from 498.4077646611028deg at 10.770363613957516% 38.662070864657224%, #7F9CF5, calc(4 * 100% / 5), transparent 0)"
                  title="ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
                />
              </div>
            </td>
            <td
              class="py-5"
            >
              <div
                class="inline-block truncate align-middle"
              >
                <span
                  class="text-theme-neutral-800 max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-base"
                  data-testid="address__wallet-name"
                >
                  OLEBank
                </span>
                <span
                  class="text-theme-neutral-400 font-semibold text-base"
                  data-testid="address__wallet-address"
                >
                  ASuusXSW9...6T9GQ3kqT
                </span>
              </div>
            </td>
            <td
              class="w-20 py-5"
            >
              <div
                class="flex justify-center h-full"
              >
                <div
                  class="sc-AxjAm cpczEI text-theme-neutral-600"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    multisig.svg
                  </svg>
                </div>
              </div>
            </td>
            <td
              class="py-5 font-bold text-theme-neutral-dark"
            >
              432,509.08946384 ARK
            </td>
            <td
              class="py-5"
            >
              <div
                class="Avatar__AvatarStyled-sc-1vsy2s2-0 gJAVMD"
                data-testid="Avatar"
              >
                <img
                  src="data:image/svg+xml;utf8,conic-gradient(from 245.6189313572394deg at 71.23650359050866% 58.24563291091246%, #319795, calc(0 * 100% / 5), transparent 0),conic-gradient(from 116.67400532121152deg at 18.42468166692464% 43.09032383164035%, #E53E3E, calc(1 * 100% / 5), transparent 0),conic-gradient(from 605.4249062768936deg at 40.67223136922462% 9.477507101353803%, #FBD38D, calc(2 * 100% / 5), transparent 0),conic-gradient(from 136.56704375639683deg at 13.579122376346959% 65.2678774949519%, #38B2AC, calc(3 * 100% / 5), transparent 0),conic-gradient(from 457.7225802410081deg at 5.17560539851077% 38.05806554779344%, #ED8936, calc(4 * 100% / 5), transparent 0)"
                  title="DACFobAjNEKsc1CtPSMyp5uA4wp6uC3fgC"
                />
              </div>
            </td>
            <td
              class="py-5 font-bold"
            >
              <span>
                Delegate 1
              </span>
            </td>
            <td
              class="py-5 font-bold text-theme-neutral-dark"
            >
              <span>
                #2
              </span>
            </td>
            <td
              class="py-5"
            >
              <div
                class="flex justify-center h-full"
              >
                <a
                  href="https://marketsquare.ark.io"
                  rel="noreferrer"
                  target="_blank"
                >
                  <div
                    class="sc-AxjAm cpczEI text-xl text-theme-primary"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      msq.svg
                    </svg>
                  </div>
                </a>
              </div>
            </td>
            <td
              class="py-5"
            >
              <div
                class="flex justify-center h-full"
              >
                <div
                  class="sc-AxjAm cpczEI text-theme-success"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    ok.svg
                  </svg>
                </div>
              </div>
            </td>
            <td
              class="py-5"
            >
              <div
                class="text-right"
              >
                <button
                  class="sc-AxiKw gFzSt"
                  color="primary"
                  data-testid="AddressListItem__button--select"
                  type="button"
                >
                  Select
                </button>
              </div>
            </td>
          </tr>
          <tr
            class="border-b border-theme-neutral-200"
          >
            <td
              class="py-5"
            >
              <div
                class="Avatar__AvatarStyled-sc-1vsy2s2-0 gJAVMD"
                data-testid="Avatar"
              >
                <img
                  src="data:image/svg+xml;utf8,conic-gradient(from 67.46589762200914deg at 71.53718823445448% 57.22013488550435%, #C05621, calc(0 * 100% / 5), transparent 0),conic-gradient(from 192.6386547194882deg at 8.03815473161857% 21.644213836564045%, #667EEA, calc(1 * 100% / 5), transparent 0),conic-gradient(from 59.603203316088326deg at 36.053458074946946% 24.456048535675073%, #F56565, calc(2 * 100% / 5), transparent 0),conic-gradient(from 510.65775964942156deg at 37.047864145974174% 89.06598562243458%, #4C51BF, calc(3 * 100% / 5), transparent 0),conic-gradient(from 373.05773480807335deg at 60.561425026443224% 40.460250636114466%, #C05621, calc(4 * 100% / 5), transparent 0)"
                  title="FSuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
                />
              </div>
            </td>
            <td
              class="py-5"
            >
              <div
                class="inline-block truncate align-middle"
              >
                <span
                  class="text-theme-neutral-800 font-semibold text-base"
                  data-testid="address__wallet-address"
                >
                  FSuusXSW9...6T9GQ3kqT
                </span>
              </div>
            </td>
            <td
              class="w-20 py-5"
            >
              <div
                class="flex justify-center h-full"
              >
                <div
                  class="sc-AxjAm cpczEI text-theme-neutral-600"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    ledger.svg
                  </svg>
                </div>
              </div>
            </td>
            <td
              class="py-5 font-bold text-theme-neutral-dark"
            >
              8,523.3884504 ARK
            </td>
            <td
              class="py-5"
            >
              <div
                class="Avatar__AvatarStyled-sc-1vsy2s2-0 gJAVMD"
                data-testid="Avatar"
              >
                <img
                  src="data:image/svg+xml;utf8,conic-gradient(from 502.13746728218763deg at 17.277962957263043% 54.12734865335237%, #E53E3E, calc(0 * 100% / 5), transparent 0),conic-gradient(from 389.86025654283304deg at 46.37229401263095% 43.81144731760174%, #E53E3E, calc(1 * 100% / 5), transparent 0),conic-gradient(from 199.31169716763398deg at 30.55394623037714% 67.99453038617031%, #4FD1C5, calc(2 * 100% / 5), transparent 0),conic-gradient(from 422.6058834782042deg at 23.895772548577764% 45.198643877844674%, #4FD1C5, calc(3 * 100% / 5), transparent 0),conic-gradient(from 130.71630200151841deg at 10.526560455973296% 38.999430296257614%, #319795, calc(4 * 100% / 5), transparent 0)"
                  title="DBozeHpqr7fie1QrfmNcGzdtEb7NB73AGq"
                />
              </div>
            </td>
            <td
              class="py-5 font-bold"
            >
              <span>
                Delegate 45
              </span>
            </td>
            <td
              class="py-5 font-bold text-theme-neutral-dark"
            >
              <span>
                #45
              </span>
            </td>
            <td
              class="py-5"
            />
            <td
              class="py-5"
            >
              <div
                class="flex justify-center h-full"
              >
                <div
                  class="sc-AxjAm cpczEI text-theme-success"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    ok.svg
                  </svg>
                </div>
              </div>
            </td>
            <td
              class="py-5"
            >
              <div
                class="text-right"
              >
                <button
                  class="sc-AxiKw gFzSt"
                  color="primary"
                  data-testid="AddressListItem__button--select"
                  type="button"
                >
                  Select
                </button>
              </div>
            </td>
          </tr>
          <tr
            class="border-b border-theme-neutral-200"
          >
            <td
              class="py-5"
            >
              <div
                class="Avatar__AvatarStyled-sc-1vsy2s2-0 gJAVMD"
                data-testid="Avatar"
              >
                <img
                  src="data:image/svg+xml;utf8,conic-gradient(from 204.45221048150418deg at 37.920446045050745% 73.96774121100779%, #667EEA, calc(0 * 100% / 5), transparent 0),conic-gradient(from 172.27796760257246deg at 4.155826345665801% 27.133094449564833%, #38B2AC, calc(1 * 100% / 5), transparent 0),conic-gradient(from 616.9187209581244deg at 19.062322852561415% 2.1825311515707013%, #742A2A, calc(2 * 100% / 5), transparent 0),conic-gradient(from 612.3085136924868deg at 85.03334214678054% 13.731374685193872%, #7F9CF5, calc(3 * 100% / 5), transparent 0),conic-gradient(from 600.6942970497453deg at 93.7716677334512% 26.58336035841517%, #ED8936, calc(4 * 100% / 5), transparent 0)"
                  title="DSuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
                />
              </div>
            </td>
            <td
              class="py-5"
            >
              <div
                class="inline-block truncate align-middle"
              >
                <span
                  class="text-theme-neutral-800 font-semibold text-base"
                  data-testid="address__wallet-address"
                >
                  DSuusXSW9...6T9GQ3kqT
                </span>
              </div>
            </td>
            <td
              class="w-20 py-5"
            />
            <td
              class="py-5 font-bold text-theme-neutral-dark"
            >
              0.000462 ARK
            </td>
            <td
              class="py-5"
            >
              <div
                class="sc-AxhCb fwVCao border-theme-neutral-200"
              />
            </td>
            <td
              class="py-5 font-bold"
            >
              <span
                class="text-theme-neutral-400"
              >
                N/A
              </span>
            </td>
            <td
              class="py-5 font-bold text-theme-neutral-dark"
            />
            <td
              class="py-5"
            />
            <td
              class="py-5"
            />
            <td
              class="py-5"
            >
              <div
                class="text-right"
              >
                <button
                  class="sc-AxiKw gFzSt"
                  color="primary"
                  data-testid="AddressListItem__button--select"
                  type="button"
                >
                  Select
                </button>
              </div>
            </td>
          </tr>
          <tr
            class="border-b border-theme-neutral-200"
          >
            <td
              class="py-5"
            >
              <div
                class="Avatar__AvatarStyled-sc-1vsy2s2-0 gJAVMD"
                data-testid="Avatar"
              >
                <img
                  src="data:image/svg+xml;utf8,conic-gradient(from 40.06279236011007deg at 63.10884275707651% 26.728714286312155%, #7F9CF5, calc(0 * 100% / 5), transparent 0),conic-gradient(from 521.4211156344014deg at 38.23642068742422% 69.68917855504077%, #5A67D8, calc(1 * 100% / 5), transparent 0),conic-gradient(from 78.19952374690672deg at 20.59352360924936% 20.45384192561176%, #4C51BF, calc(2 * 100% / 5), transparent 0),conic-gradient(from 189.21741466596455deg at 24.77643971297876% 74.42177287189847%, #FC8181, calc(3 * 100% / 5), transparent 0),conic-gradient(from 554.2770461540739deg at 40.381580057553165% 36.90272864103171%, #38B2AC, calc(4 * 100% / 5), transparent 0)"
                  title="HSuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
                />
              </div>
            </td>
            <td
              class="py-5"
            >
              <div
                class="inline-block truncate align-middle"
              >
                <span
                  class="text-theme-neutral-800 font-semibold text-base"
                  data-testid="address__wallet-address"
                >
                  HSuusXSW9...6T9GQ3kqT
                </span>
              </div>
            </td>
            <td
              class="w-20 py-5"
            />
            <td
              class="py-5 font-bold text-theme-neutral-dark"
            >
              0.00 ARK
            </td>
            <td
              class="py-5"
            >
              <div
                class="sc-AxhCb fwVCao border-theme-neutral-200"
              />
            </td>
            <td
              class="py-5 font-bold"
            >
              <span
                class="text-theme-neutral-400"
              >
                N/A
              </span>
            </td>
            <td
              class="py-5 font-bold text-theme-neutral-dark"
            />
            <td
              class="py-5"
            />
            <td
              class="py-5"
            />
            <td
              class="py-5"
            >
              <div
                class="text-right"
              >
                <button
                  class="sc-AxiKw gFzSt"
                  color="primary"
                  data-testid="AddressListItem__button--select"
                  type="button"
                >
                  Select
                </button>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AddressList should render with empty list 1`] = `
<DocumentFragment>
  <div
    data-testid="AddressList"
  >
    <h2
      class="py-5 text-2xl font-bold"
    >
      Select Address
    </h2>
    <div
      class="sc-AxirZ dyYkHQ"
      role="table"
    >
      <table
        class="table-auto"
      >
        <thead>
          <tr
            role="row"
          >
            <th
              class="text-xs text-left select-none text-theme-neutral-400"
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top  undefined"
              >
                <div
                  class="mr-1"
                />
                <div
                  class="mt-1 text-theme-color-neutral-500"
                  data-testid="table__Sort"
                />
              </div>
            </th>
            <th
              class="text-xs text-left select-none text-theme-neutral-400"
              colspan="1"
              data-testid="table__th--1"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top  undefined"
              >
                <div
                  class="mr-1"
                >
                  My Address
                </div>
                <div
                  class="mt-1 text-theme-color-neutral-500"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxjAm iepfoc"
                    height="10"
                    width="10"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="text-xs text-left select-none text-theme-neutral-400"
              colspan="1"
              data-testid="table__th--2"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top  flex justify-center"
              >
                <div
                  class="mr-1"
                />
                <div
                  class="mt-1 text-theme-color-neutral-500"
                  data-testid="table__Sort"
                />
              </div>
            </th>
            <th
              class="text-xs text-left select-none text-theme-neutral-400"
              colspan="1"
              data-testid="table__th--3"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top  undefined"
              >
                <div
                  class="mr-1"
                >
                  Balance
                </div>
                <div
                  class="mt-1 text-theme-color-neutral-500"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxjAm iepfoc"
                    height="10"
                    width="10"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="text-xs text-left select-none text-theme-neutral-400"
              colspan="1"
              data-testid="table__th--4"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top  undefined"
              >
                <div
                  class="mr-1"
                />
                <div
                  class="mt-1 text-theme-color-neutral-500"
                  data-testid="table__Sort"
                />
              </div>
            </th>
            <th
              class="text-xs text-left select-none text-theme-neutral-400"
              colspan="1"
              data-testid="table__th--5"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top  undefined"
              >
                <div
                  class="mr-1"
                >
                  Delegate
                </div>
                <div
                  class="mt-1 text-theme-color-neutral-500"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxjAm iepfoc"
                    height="10"
                    width="10"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="text-xs text-left select-none text-theme-neutral-400"
              colspan="1"
              data-testid="table__th--6"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top  undefined"
              >
                <div
                  class="mr-1"
                >
                  Rank
                </div>
                <div
                  class="mt-1 text-theme-color-neutral-500"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxjAm iepfoc"
                    height="10"
                    width="10"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="text-xs text-left select-none text-theme-neutral-400"
              colspan="1"
              data-testid="table__th--7"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top  flex justify-center"
              >
                <div
                  class="mr-1"
                >
                  Profile
                </div>
                <div
                  class="mt-1 text-theme-color-neutral-500"
                  data-testid="table__Sort"
                />
              </div>
            </th>
            <th
              class="text-xs text-left select-none text-theme-neutral-400"
              colspan="1"
              data-testid="table__th--8"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top  flex justify-center"
              >
                <div
                  class="mr-1"
                >
                  Status
                </div>
                <div
                  class="mt-1 text-theme-color-neutral-500"
                  data-testid="table__Sort"
                />
              </div>
            </th>
            <th
              class="text-xs text-left select-none text-theme-neutral-400"
              colspan="1"
              data-testid="table__th--9"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top  undefined"
              >
                <div
                  class="mr-1"
                />
                <div
                  class="mt-1 text-theme-color-neutral-500"
                  data-testid="table__Sort"
                />
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        />
      </table>
    </div>
  </div>
</DocumentFragment>
`;
